re-linked index.html to children.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!--  códificação dos caracteres -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <meta name="viewport" content="width=device-width" />
     <title>Módulo 05</title>
   </head>
@@ -17,21 +17,21 @@
 
 
       <div class="grid-container">
-        <div class="grid-item"> <a href="aula04.html">Aula 04<br /><span
+        <div class="grid-item"> <a href="./html/aula04.html">Aula 04<br /><span
         style="font-size:small">Positionamento</a></span></div>
-        <div class="grid-item"><a href="aula05.html">Aula 05 <br><span
+        <div class="grid-item"><a href="./html/aula05.html">Aula 05 <br><span
         style="font-size:small">Tamanho de Caixa</a></span></div>
-        <div class="grid-item"><a href="aula06.html">Aula 06<br><span
+        <div class="grid-item"><a href="./html/aula06.html">Aula 06<br><span
         style="font-size:small">Float</a></span></div>
-        <div class="grid-item"><a href="aula07.html">Aula 07<br><span
+        <div class="grid-item"><a href="./html/aula07.html">Aula 07<br><span
         style="font-size:small">Flutuando Elementos</a></span></div>
-        <div class="grid-item"><a href="aula08.html">Aula 08<br><span
+        <div class="grid-item"><a href="./html/aula08.html">Aula 08<br><span
         style="font-size:small">Grid</a></span></div>
-        <div class="grid-item"><a href="aula09.html">Aula 09<br><span style="font-size:small">Pilha
-        dos Elementos</a></span></div>
-        <div class="grid-item"><a href="aula11.html">Aula 11<br><span
+        <div class="grid-item"><a href="./html/aula09.html">Aula 09<br><span
+        style="font-size:small">Pilha dos Elementos</a></span></div>
+        <div class="grid-item"><a href="./html/aula11.html">Aula 11<br><span
         style="font-size:small">Fontes</a></span></div>
-        <div class="grid-item"><a href="aula12.html">Aula 12<br><span
+        <div class="grid-item"><a href="./html/aula12.html">Aula 12<br><span
         style="font-size:small">Textos</a></span></div>
       </div>
     </div>
